--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -6,84 +6,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.notes.NotesFragment">
 
-    <View
-        android:id="@+id/blockView"
-        style="@style/blockMain"
-        android:layout_width="320sp"
-        android:layout_height="390sp"
-        android:layout_marginTop="50dp"
+    <Button
+        android:id="@+id/createNoteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Добавить"
+        app:layout_constraintBottom_toTopOf="@+id/rcViewNote"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/authTextView"
-        style="@style/MainText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/add_note"
-        android:gravity="center_horizontal"
-        android:textSize="35sp"
-        app:layout_constraintEnd_toEndOf="@+id/blockView"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="@+id/blockView"
-        app:layout_constraintTop_toTopOf="@+id/blockView" />
-
-    <EditText
-        android:id="@+id/titlePlainText"
-        style="@style/EditText"
-        android:layout_width="270dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:hint="Название"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/blockView"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="@+id/blockView"
-        app:layout_constraintTop_toBottomOf="@+id/authTextView" />
-
-
-    <EditText
-        android:id="@+id/contentPlainText"
-        style="@style/EditText"
-        android:layout_width="270dp"
-        android:layout_height="60dp"
-        android:ems="10"
-        android:layout_marginTop="20dp"
-        android:hint="Описание"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/blockView"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="@+id/blockView"
-        app:layout_constraintTop_toBottomOf="@+id/titlePlainText" />
-
-
-    <ImageButton
-        android:id="@+id/nextAddTaskButton"
-        android:layout_width="188dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/btn_next"
-        android:foreground="@drawable/pressedbtnnext"
-        app:layout_constraintEnd_toEndOf="@+id/blockView"
-        app:layout_constraintHorizontal_bias="0.477"
-        app:layout_constraintStart_toStartOf="@+id/blockView"
-        app:layout_constraintTop_toBottomOf="@+id/contentPlainText" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/qanelas"
-        android:text="@string/next"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/nextAddTaskButton"
-        app:layout_constraintEnd_toEndOf="@+id/nextAddTaskButton"
-        app:layout_constraintStart_toStartOf="@+id/nextAddTaskButton"
-        app:layout_constraintTop_toTopOf="@+id/nextAddTaskButton" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcViewNote"
+        android:layout_marginTop="80dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_note" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
