--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
     android:layout_marginTop="20dp"
+    android:layout_marginEnd="20dp"
     android:layout_marginBottom="20dp"
-    >
+    android:elevation="10dp"
+    app:cardCornerRadius="10dp"
+    tools:background="@color/black">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:textSize="30sp"
-            android:fontFamily="@font/qanelas"
-            android:layout_height="wrap_content"
-            android:text="@string/title"/>
-        <TextView
-            android:id="@+id/description"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/qanelas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/description"/>
 
         <TextView
-            android:id="@+id/date"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/qanelas"
-            android:layout_width="wrap_content"
+            android:id="@+id/titleTextView"
+            style="@style/MainText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/date"/>
+            android:gravity="center"
+            android:textSize="35sp"
+            tools:text="Название заметки" />
+
+        <TextView
+            android:id="@+id/contentTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            tools:text="Плыли мы по морю ветер мачту рвал.
+Капитан Залупа с корабля сбежал.
+Я стоял на вахте и держал весло.
+Чем-то уебало и меня снесло." />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
